docs(accounts/balance): update description
